# cpp_game_dev

./: .gitignore  CHANGELOG.txt  LICENSE  README.md
assignments/week_one/: README.md  binary_search_tree.cpp
assignments/week_three/: CMakeLists.txt  README.md
assignments/week_three/src/: main.cpp
assignments/week_two/: CMakeLists.txt  README.md
ecs/: ecs_example.cpp
entity_component_system_modules/: CMakeLists.txt
entity_component_system_modules/include/: component.hpp  entities.hpp  entity.hpp
entity_component_system_modules/src/: component.cpp  main.cpp
modules/: CMakeLists.txt  helloworld.cpp  main.cpp
raylib_development/2d_sample/: main.cpp
raylib_development/sidescroll_game2D/: CMakeLists.txt  main.cpp  run.bat
raylib_development/sidescroll_game2D/assets/: character_sprite.psd
raylib_development/sidescroll_game2D/src/: animation.cpp  animation.hpp  collectible.cpp  collectible.hpp  config.h  door.cpp  door.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  player.cpp  player.hpp
samples/: adv_data_structures.cpp  containers.cpp  cpp_basics.cpp  functions.cpp  linked_lists.cpp  pointers.cpp
samples/namespaces/: namespaces.cpp  namespaces.h
samples/test_modules/: CMakeLists.txt
smart_pointers/: smart_ptrs.cpp
store_app/: CMakeLists.txt
store_app/include/: book.hpp  book_store.hpp  item.hpp  store.hpp
store_app/src/: book.cpp  book_store.cpp  item.cpp  main.cpp  store.cpp
tmp_app/: main_app.cpp
tmp_app/oop_practice/: main.cpp  new_player.h  player.cpp  player.h
ui_dev/: CMakeLists.txt
ui_dev/src/: main.cpp
(+18 files in other folders)
